--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -12,4 +12,8 @@
       <Folder Include="wwwroot\js\videojs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    </ItemGroup>
+
 </Project>
