--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -13,7 +13,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
       <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+      <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
     </ItemGroup>
 
 </Project>
