--- a/YTProxy/YTProxy.csproj
+++ b/YTProxy/YTProxy.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Reference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
