"Merge" 'local-api' to 'master'
I tried for an hour to actually merge the 2 branches, but no matter what I did, i couldn't do it. This works too

--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\YTProxy\YTProxy.csproj" />
+      <ProjectReference Include="..\InnerTube\InnerTube.csproj" />
     </ItemGroup>
 
     <ItemGroup>
