--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
       <PackageReference Include="Humanizer.Core" Version="2.14.1" />
       <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
+      <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="1.1.5" />
     </ItemGroup>
 
 </Project>
