--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,5 @@
 stages:
  - build
- - push
- - release
 
 build_image:
   image: docker:latest
@@ -12,24 +10,5 @@ build_image:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -t registry.gitlab.com/kuylar/lighttube .
     - docker push registry.gitlab.com/kuylar/lighttube:latest
-    
-push_to_heroku:
-  image: docker:latest
-  stage: push
-  services:
-  - docker:dind
-  script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-    - docker pull registry.gitlab.com/kuylar/lighttube:latest
-    - docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-    - docker tag registry.gitlab.com/kuylar/lighttube:latest registry.heroku.com/lighttube/web:latest
-    - docker push registry.heroku.com/lighttube/web:latest
 
-deploy_to_heroku:
-  image: node:latest
-  stage: release
-  services:
-  - docker:dind
-  script:
-    - npm install -g heroku
-    - heroku container:release web --app lighttube
+# todo: push to docker hub
