--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="Humanizer.Core" Version="2.14.1" />
       <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
       <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="1.1.5" />
+      <PackageReference Include="YamlDotNet" Version="11.2.1" />
     </ItemGroup>
 
 </Project>
