--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,6 @@ publish_image:
     - docker build -t kuylar/lighttube .
     - export IMAGE_ID=`docker images -q "kuylar/lighttube"`
     - docker tag $IMAGE_ID kuylar/lighttube:`date +%Y%m%d`
+    - docker push kuylar/lighttube:`date +%Y%m%d`
     - docker tag $IMAGE_ID kuylar/lighttube:latest
-    - docker push kuylar/lighttube
+    - docker push kuylar/lighttube:latest
