--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
       <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.17" />
       <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
       <PackageReference Include="MyCSharp.HttpUserAgentParser" Version="1.1.5" />
       <PackageReference Include="YamlDotNet" Version="11.2.1" />
