--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Check version
         run: echo Building version ${{ env.LIGHTTUBE_VERSION }}
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
