--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: kuylar/lighttube:latest,kuylar/lighttube:${{ env.LIGHTTUBE_VERSION }}
+          tags: inftord/lighttube:latest,inftord/lighttube:${{ env.LIGHTTUBE_VERSION }}
