--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+            platforms: linux/amd64,linux/arm64
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
