--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,9 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-            platforms: linux/amd64,linux/arm64,linux/arm64/v8
+            platforms: linux/amd64,linux/arm64
+            driver-opts: | 
+              image=moby/buildkit:v0.10.6
       -
         name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -36,5 +38,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          platforms: linux/arm64,linux/amd64,linux/arm64/v8
+          platforms: linux/arm64,linux/amd64
           tags: inftord/lighttube:latest,inftord/lighttube:${{ env.LIGHTTUBE_VERSION }}
