--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -10,7 +10,7 @@
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Humanizer.Core" Version="2.14.1" />
         <PackageReference Include="InnerTube" Version="1.0.21" /> 
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version='6.0.19" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.19" />
         <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
