--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <PublishReadyToRunExclude Include="ZstdSharp.dll" />
     </PropertyGroup>
 
     <ItemGroup>
