--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -159,6 +159,6 @@ jobs:
         # An optional tag for the release. If this is omitted the git ref will be used (if it is a tag).
         tag: ${{github.sha}} # optional, default is 
         # The Github token.
-        # token: # optional, default is ${{ github.token }}
+        token: ${{secrets.RELEASE_TOKEN}} # optional, default is ${{ github.token }}
         # When allowUpdates is enabled, this will fail the action if the release it is updating is not a draft or a prerelease.
         # updateOnlyUnreleased: # optional, default is false
