--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -157,7 +157,7 @@ jobs:
         # When skipIfReleaseExists is enabled the action will be skipped if a non-draft release already exists for the provided tag.
         # skipIfReleaseExists: true # optional, default is false
         # An optional tag for the release. If this is omitted the git ref will be used (if it is a tag).
-        tag: ${{github.sha}} # optional, default is 
+        tag: prerelease-r2r-${{github.sha}} # optional, default is 
         # The Github token.
         token: ${{secrets.RELEASE_TOKEN}} # optional, default is ${{ github.token }}
         # When allowUpdates is enabled, this will fail the action if the release it is updating is not a draft or a prerelease.
