--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,19 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        platform:
+          - win-x86
+          - win-x64
+          - win-arm64
+          - linux-x64
+          - linux-musl-x64
+          - linux-arm
+          - linux-arm64
+          - osx-x64
+          - osx.11.0-arm64
+
     if: |
       !contains(github.event.head_commit.message, 'skip ci')
 
@@ -28,78 +41,14 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Publish win-x86
-      run: dotnet publish -c Release -r win-x86 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish win-x64
-      run: dotnet publish -c Release -r win-x64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish win-arm64
-      run: dotnet publish -c Release -r win-arm64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish linux-x64
-      run: dotnet publish -c Release -r linux-x64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish linux-musl-x64
-      run: dotnet publish -c Release -r linux-musl-x64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish linux-arm
-      run: dotnet publish -c Release -r linux-arm -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish linux-arm64
-      run: dotnet publish -c Release -r linux-arm64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish osx-x64
-      run: dotnet publish -c Release -r osx-x64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
-    - name: Publish osx.11.0-arm64
-      run: dotnet publish -c Release -r osx.11.0-arm64 -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
+    - name: Publish
+      run: dotnet publish -c Release -r ${{ matrix.platform }} -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:PublishReadyToRunShowWarnings=true -p:PublishTrimmed=true -p:TrimMode=partial --self-contained true
 
-    - name: Upload win-x86 R2R binaries
+    - name: Upload binaries
       uses: actions/upload-artifact@v3
       with:
-        name: win-x86 R2R Binaries
-        path: '*/bin/Release/*/win-x86/publish/'
-
-    - name: Upload win-x64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: win-x64 R2R Binaries
-        path: '*/bin/Release/*/win-x64/publish/'
-
-    - name: Upload win-arm64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: win-arm64 R2R Binaries
-        path: '*/bin/Release/*/win-arm64/publish/'
-
-    - name: Upload linux-x64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-x64 R2R Binaries
-        path: '*/bin/Release/*/linux-x64/publish/'
-
-    - name: Upload linux-musl-x64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-musl-x64 R2R Binaries
-        path: '*/bin/Release/*/linux-musl-x64/publish/'
-
-    - name: Upload linux-arm R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-arm R2R Binaries
-        path: '*/bin/Release/*/linux-arm/publish/'
-
-    - name: Upload linux-arm64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: linux-arm64 R2R Binaries
-        path: '*/bin/Release/*/linux-arm64/publish/'
-
-    - name: Upload osx-x64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: osx-x64 R2R Binaries
-        path: '*/bin/Release/*/osx-x64/publish/'
-
-    - name: Upload osx.11.0-arm64 R2R binaries
-      uses: actions/upload-artifact@v3
-      with:
-        name: osx.11.0-arm64 R2R Binaries
-        path: '*/bin/Release/*/osx.11.0-arm64/publish/'
+        name: ${{ matrix.platform }} R2R Binaries
+        path: '*/bin/Release/*/${{ matrix.platform }}/publish/'
 
     - name: Create Release
       # You may pin to the exact commit or the version.
@@ -113,7 +62,7 @@ jobs:
         # An optional flag which indicates if artifact read or upload errors should fail the build.
         artifactErrorsFailBuild: false # optional, default is 
         # An optional set of paths representing artifacts to upload to the release. This may be a single path or a comma delimited list of paths (or globs)
-        artifact: '**'
+        artifacts	: ${{ matrix.platform }} R2R Binaries.zip
         # The content type of the artifact. Defaults to raw
         artifactContentType: raw # optional, default is 
         # An optional body for the release.
