Update and rename dotnet.yml to r2r.yml

--- a/.github/workflows/r2r.yml
+++ b/.github/workflows/r2r.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: .NET R2R Build
 
 on:
   push:
@@ -50,6 +50,10 @@ jobs:
         name: ${{ matrix.platform }} R2R Binaries
         path: '*/bin/Release/*/${{ matrix.platform }}/publish/'
 
+    - uses: edgarrc/action-7z@v1
+      with:
+        args: '7z a "${{ matrix.platform }} R2R Binaries.zip" "*/bin/Release/*/${{ matrix.platform }}/publish/"'
+
     - name: Create Release
       # You may pin to the exact commit or the version.
       # uses: ncipollo/release-action@a2e71bdd4e7dab70ca26a852f29600c98b33153e
@@ -62,7 +66,7 @@ jobs:
         # An optional flag which indicates if artifact read or upload errors should fail the build.
         artifactErrorsFailBuild: false # optional, default is 
         # An optional set of paths representing artifacts to upload to the release. This may be a single path or a comma delimited list of paths (or globs)
-        artifacts	: ${{ matrix.platform }} R2R Binaries.zip
+        artifacts: ${{ matrix.platform }} R2R Binaries.zip
         # The content type of the artifact. Defaults to raw
         artifactContentType: raw # optional, default is 
         # An optional body for the release.
