--- a/.github/workflows/r2r.yml
+++ b/.github/workflows/r2r.yml
@@ -53,12 +53,14 @@ jobs:
     - name: Pack with 7-zip
       run: '7z a "${{ matrix.platform }} R2R Binaries.zip" "*/bin/Release/*/${{ matrix.platform }}/publish/"'
 
+    - run: '$env:SHA_SHORT = $("${{github.sha}}".Substring(0, 6))'
+
     - name: Create Release
       # You may pin to the exact commit or the version.
       # uses: ncipollo/release-action@a2e71bdd4e7dab70ca26a852f29600c98b33153e
       uses: ncipollo/release-action@v1.12.0
       if: |
-        github.event_name == 'push'
+        github.event_name == 'push' && github.ref == 'refs/heads/master'
       with:
         # An optional flag which indicates if we should update a release if it already exists. Defaults to false.
         allowUpdates: true # optional, default is 
@@ -83,7 +85,7 @@ jobs:
         # Indicates if the release should be the "latest" release or not.
         makeLatest: true # optional, default is legacy
         # An optional name for the release. If this is omitted the tag will be used.
-        name: Rolling R2R Build for commit ${{github.sha}} # optional, default is 
+        name: Rolling R2R Build for commit `${{env.SHA_SHORT}}` # optional, default is 
         ## Indicates if the release body should be omitted.
         #omitBody: # optional, default is false
         ## Indicates if the release body should be omitted during updates. The body will still be applied for newly created releases. This will preserve the existing body during updates.
@@ -109,7 +111,7 @@ jobs:
         # When skipIfReleaseExists is enabled the action will be skipped if a non-draft release already exists for the provided tag.
         # skipIfReleaseExists: true # optional, default is false
         # An optional tag for the release. If this is omitted the git ref will be used (if it is a tag).
-        tag: prerelease-r2r-${{github.sha}} # optional, default is 
+        tag: prerelease-r2r-${{env.SHA_SHORT}}-${{env.GITHUB_RUN_ID}} # optional, default is 
         # The Github token.
         token: ${{secrets.RELEASE_TOKEN}} # optional, default is ${{ github.token }}
         # When allowUpdates is enabled, this will fail the action if the release it is updating is not a draft or a prerelease.
