--- a/.github/workflows/r2r.yml
+++ b/.github/workflows/r2r.yml
@@ -3,11 +3,7 @@
 
 name: .NET R2R Build
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [push, pull_request]
 
 jobs:
   build:
