Remove need for R2R to use a GitHub PAT for creating releases

--- a/.github/workflows/r2r.yml
+++ b/.github/workflows/r2r.yml
@@ -7,6 +7,9 @@ on: [push, pull_request]
 
 jobs:
   build:
+    permissions:
+      contents: write # In order to be able to push releases
+
     strategy:
       matrix:
         platform:
@@ -113,6 +116,6 @@ jobs:
         # An optional tag for the release. If this is omitted the git ref will be used (if it is a tag).
         tag: prerelease-r2r-${{steps.sha.outputs.substring}}-${{github.run_id}} # optional, default is
         # The Github token.
-        token: ${{secrets.RELEASE_TOKEN}} # optional, default is ${{ github.token }}
+        token: ${{ github.token }}
         # When allowUpdates is enabled, this will fail the action if the release it is updating is not a draft or a prerelease.
         # updateOnlyUnreleased: # optional, default is false
