--- a/LightTube/LightTube.csproj
+++ b/LightTube/LightTube.csproj
@@ -10,8 +10,7 @@
         <PublishReadyToRunExclude Include="ZstdSharp.dll"/>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
         <PackageReference Include="Humanizer" Version="2.14.1" />
-        <!--PackageReference Include="InnerTube" Version="2.0.0-rc.12"/-->
-        <ProjectReference Include="/home/kuylar/Projects/DotNet/InnerTube/InnerTube/InnerTube.csproj"/>
+        <PackageReference Include="InnerTube" Version="2.0.0-rc.12"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.3"/>
         <PackageReference Include="MongoDB.Driver" Version="2.24.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
